--- a/Win64/proj/openSeesPy/OpenSeesPy.vcxproj.filters
+++ b/Win64/proj/openSeesPy/OpenSeesPy.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="..\..\..\SRC\interpreter\OpenSeesFrictionModelCommands.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\interpreter\OpenSeesParameterCommands.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\classTags.h">
