fmk - adding libs for Win32 and Win64 debug and release

--- a/.gitattributes
+++ b/.gitattributes
@@ -4805,10 +4805,28 @@ SRC/utility/Timer.tex -text
 SRC/utility/utility.tex -text
 Win32/OpenSees.sln -text
 Win32/VC2005errno.cpp -text
+Win32/lib/debug/DoddRestrepo.lib -text
 Win32/lib/debug/DoddRestrepo.pdb -text
+Win32/lib/debug/arpack.lib -text
 Win32/lib/debug/arpack.pdb -text
+Win32/lib/debug/blas.lib -text
+Win32/lib/debug/drain.lib -text
+Win32/lib/debug/feap.lib -text
+Win32/lib/debug/fedeas.lib -text
 Win32/lib/debug/fedeas.pdb -text
+Win32/lib/debug/lapack.lib -text
+Win32/lib/debug/umfpack.lib -text
+Win32/lib/debug/umfpackC.lib -text
 Win32/lib/debug/umfpackC.pdb -text
+Win32/lib/release/DoddRestrepo.lib -text
+Win32/lib/release/arpack.lib -text
+Win32/lib/release/blas.lib -text
+Win32/lib/release/drain.lib -text
+Win32/lib/release/feap.lib -text
+Win32/lib/release/fedeas.lib -text
+Win32/lib/release/lapack.lib -text
+Win32/lib/release/umfpack.lib -text
+Win32/lib/release/umfpackC.lib -text
 Win32/proj/actor/actor.dsp -text
 Win32/proj/actor/actor.mak -text
 Win32/proj/actor/actor.vcxproj -text
@@ -4914,10 +4932,28 @@ Win32/proj/utility/utility.mak -text
 Win32/proj/utility/utility.vcxproj -text
 Win64/OpenSees.sln -text
 Win64/VC2005errno.cpp -text
+Win64/lib/debug/DoddRestrepo.lib -text
 Win64/lib/debug/DoddRestrepo.pdb -text
+Win64/lib/debug/arpack.lib -text
 Win64/lib/debug/arpack.pdb -text
+Win64/lib/debug/blas.lib -text
+Win64/lib/debug/drain.lib -text
+Win64/lib/debug/feap.lib -text
+Win64/lib/debug/fedeas.lib -text
 Win64/lib/debug/fedeas.pdb -text
+Win64/lib/debug/lapack.lib -text
+Win64/lib/debug/umfpack.lib -text
+Win64/lib/debug/umfpackC.lib -text
 Win64/lib/debug/umfpackC.pdb -text
+Win64/lib/release/DoddRestrepo.lib -text
+Win64/lib/release/arpack.lib -text
+Win64/lib/release/blas.lib -text
+Win64/lib/release/drain.lib -text
+Win64/lib/release/feap.lib -text
+Win64/lib/release/fedeas.lib -text
+Win64/lib/release/lapack.lib -text
+Win64/lib/release/umfpack.lib -text
+Win64/lib/release/umfpackC.lib -text
 Win64/proj/actor/actor.vcxproj -text
 Win64/proj/analysis/analysis.vcxproj -text
 Win64/proj/analysis/analysis.vcxproj.filters -text
