--- a/SRC/material/nD/stressDensityModel/Makefile
+++ b/SRC/material/nD/stressDensityModel/Makefile
@@ -1,7 +1,8 @@
 include ../../../../Makefile.def
 
 OBJS = sdm3d.o sdm2d.o MODULE_ALL_INTERFACES_3D.o MODULE_ALL_INTERFACES_2D.o \
-	   StressDensityModel.o StressDensityModel2D.o StressDensityModel3D.o
+	   StressDensityModel.o StressDensityModel2D.o StressDensityModel3D.o \
+	   stressDensity.o SDM-UC.o
 
 all: $(OBJS) 
 
