--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -605,7 +605,11 @@ ELE_LIBS   =  $(FE)/element/Element.o \
 	$(FE)/element/UWelements/Brick8FiberOverlay.o \
 	$(FE)/element/UWelements/QuadBeamEmbedContact.o \
 	$(FE)/element/catenaryCable/CatenaryCable.o \
-	$(FE)/element/tetrahedron/FourNodeTetrahedron.o
+	$(FE)/element/tetrahedron/FourNodeTetrahedron.o \
+	$(FE)/element/UWelements/EmbeddedBeamInterfaceL.o \
+	$(FE)/element/UWelements/EmbeddedBeamInterfaceP.o \
+	$(FE)/element/UWelements/EmbeddedEPBeamInterface.o \
+	$(FE)/element/UWelements/Tcl_generateInterfacePoints.o
 
 #	$(FE)/material/nD/Damage2p.o \
 #	$(FE)/material/nD/Damage2p3D.o \
