--- a/Win64/proj/element/element.vcxproj
+++ b/Win64/proj/element/element.vcxproj
@@ -146,7 +146,11 @@
     <ClCompile Include="..\..\..\SRC\element\TclElementCommands.cpp" />
     <ClCompile Include="..\..\..\SRC\element\tetrahedron\FourNodeTetrahedron.cpp" />
     <ClCompile Include="..\..\..\SRC\element\truss\N4BiaxialTruss.cpp" />
+    <ClCompile Include="..\..\..\SRC\element\UWelements\EmbeddedBeamInterfaceL.cpp" />
+    <ClCompile Include="..\..\..\SRC\element\UWelements\EmbeddedBeamInterfaceP.cpp" />
+    <ClCompile Include="..\..\..\SRC\element\UWelements\EmbeddedEPBeamInterface.cpp" />
     <ClCompile Include="..\..\..\SRC\element\UWelements\QuadBeamEmbedContact.cpp" />
+    <ClCompile Include="..\..\..\SRC\element\UWelements\Tcl_generateInterfacePoints.cpp" />
     <ClCompile Include="..\..\..\SRC\element\WrapperElement.cpp" />
     <ClCompile Include="..\..\..\SRC\element\truss\CorotTruss.cpp" />
     <ClCompile Include="..\..\..\SRC\element\truss\CorotTruss2.cpp" />
@@ -390,7 +394,11 @@
     <ClInclude Include="..\..\..\SRC\element\surfaceLoad\TriSurfaceLoad.h" />
     <ClInclude Include="..\..\..\SRC\element\tetrahedron\FourNodeTetrahedron.h" />
     <ClInclude Include="..\..\..\SRC\element\truss\N4BiaxialTruss.h" />
+    <ClInclude Include="..\..\..\SRC\element\UWelements\EmbeddedBeamInterfaceL.h" />
+    <ClInclude Include="..\..\..\SRC\element\UWelements\EmbeddedBeamInterfaceP.h" />
+    <ClInclude Include="..\..\..\SRC\element\UWelements\EmbeddedEPBeamInterface.h" />
     <ClInclude Include="..\..\..\SRC\element\UWelements\QuadBeamEmbedContact.h" />
+    <ClInclude Include="..\..\..\SRC\element\UWelements\Tcl_generateInterfacePoints.h" />
     <ClInclude Include="..\..\..\SRC\element\WrapperElement.h" />
     <ClInclude Include="..\..\..\SRC\api\elementAPI.h" />
     <ClInclude Include="..\..\..\SRC\element\truss\CorotTruss.h" />
