Typo fixes for EXAMPLES/
Found via `codespell -q 3 -I ../opensees-word-whitelist.txt --skip="./OTHER"

--- a/EXAMPLES/Makefile
+++ b/EXAMPLES/Makefile
@@ -1,6 +1,6 @@
 include ../Makefile.def
 
-# the example dircetories that 
+# the example directories that 
 
 EXAMPLE1 = $(FE)/../EXAMPLES/Example1
 PLANE_FRAME = $(FE)/../EXAMPLES/PlaneFrame
