* Adds Lysmer boundary element for reflection absorbtion. * Adds Lysmer boundary loader class. * Adds some output to selfweight print command.

--- a/SRC/domain/load/Makefile
+++ b/SRC/domain/load/Makefile
@@ -16,7 +16,8 @@ OBJS       = Load.o \
 	Beam3dThermalAction.o \
 	ShellThermalAction.o \
 	SurfaceLoader.o \
-	SelfWeight.o
+	SelfWeight.o \
+	LysmerVelocityLoader.o 
 
 # Compilation control
 
