--- a/SRC/element/Makefile
+++ b/SRC/element/Makefile
@@ -46,6 +46,7 @@ all:         $(OBJS)
 	@$(CD) $(FE)/element/componentElement; $(MAKE);
 	@$(CD) $(FE)/element/catenaryCable; $(MAKE);
 	@$(CD) $(FE)/element/tetrahedron; $(MAKE);
+	@$(CD) $(FE)/element/absorbentBoundaries; $(MAKE);
 
 # Miscellaneous
 tidy:	
@@ -90,6 +91,7 @@ spotless: clean
 	@$(CD) $(FE)/element/componentElement; $(MAKE) wipe;
 	@$(CD) $(FE)/element/catenaryCable; $(MAKE) wipe;
 	@$(CD) $(FE)/element/tetrahedron; $(MAKE) wipe;
+	@$(CD) $(FE)/element/absorbentBoundaries; $(MAKE) wipe;
 
 wipe: spotless
 
