Update Makefile for PFEM elements

--- a/SRC/element/PFEMElement/Makefile
+++ b/SRC/element/PFEMElement/Makefile
@@ -1,17 +1,17 @@
 include ../../../Makefile.def
 
-OBJS = PFEMElement2D.o PFEMElement2DFIC.o PFEMElement3D.o TclModelBuilder_addPFEMElement.o PFEMMesher2D.o PFEMMesher3D.o TclPFEMCommands.o PFEMElement2DCompressible.o PFEMElement2DBubble.o tetgen.o predicates.o triangle.o PFEMElement2Dmini.o TriangleMeshGenerator.o LineMesh.o TriMesh.o BackgroundFixData.o BackgroundGrid.o BackgroundMesh.o BackgroundStructure.o Particle.o ParticleGroup.o
+OBJS = PFEMElement2D.o PFEMElement2DFIC.o PFEMElement3D.o TclModelBuilder_addPFEMElement.o PFEMElement2DCompressible.o PFEMElement2DQuasi.o PFEMElement2DBubble.o PFEMElement3DBubble.o tetgen.o predicates.o triangle.o PFEMElement2Dmini.o TriangleMeshGenerator.o TetMeshGenerator.o BackgroundMesh.o  Particle.o ParticleGroup.o BackgroundDef.o TaylorHood2D.o TriGaussPoints.o HigherOrder.o MINI.o Mesh.o LineMeshGenerator.o LineMesh.o TriMesh.o TetMesh.o QuadMeshGenerator.o QuadMesh.o
 
 all: $(OBJS)
 
 tetgen.o: $(FE)/../OTHER/Tetgen/tetgen.cxx
-	$(CC++) -O2 -fPIC -c $(FE)/../OTHER/Tetgen/tetgen.cxx -o tetgen.o
+	$(CC++) -O3 -fPIC -c $(FE)/../OTHER/Tetgen/tetgen.cxx -o tetgen.o
 
 predicates.o: $(FE)/../OTHER/Tetgen/predicates.cxx
-	$(CC++) -O -fPIC -c $(FE)/../OTHER/Tetgen/predicates.cxx -o predicates.o
+	$(CC++) -O3 -fPIC -c $(FE)/../OTHER/Tetgen/predicates.cxx -o predicates.o
 
 triangle.o: $(FE)/../OTHER/Triangle/triangle.c
-	$(CC) -O -c -fPIC $(FE)/../OTHER/Triangle/triangle.c -o triangle.o
+	$(CC) -O3 -c -fPIC $(FE)/../OTHER/Triangle/triangle.c -o triangle.o
 
 # Miscellaneous
 tidy:	
