--- a/MAKES/Makefile.def.EC2-UBUNTU
+++ b/MAKES/Makefile.def.EC2-UBUNTU
@@ -87,8 +87,8 @@ RELIABILITY = NO_RELIABILITY
 # any of the libraries already leave the directory location blank AND
 # remove the directory from DIRS.
 
-BASE		= /usr/local
-HOME		= /home/ubuntu
+BASE		= ./../usr
+HOME		= .
 FE		= $(HOME)/OpenSees/SRC
 
 AMDdir       = $(HOME)/OpenSees/OTHER/AMD
@@ -162,7 +162,7 @@ WIPE_LIBS	= $(FE_LIBRARY) \
 # Compilers
 CC++	= /usr/bin/g++
 CC      = /usr/bin/gcc
-FC	= /usr/bin/gfortran
+FC	= /usr/bin/gfortran-7
 
 AR		= ar 
 ARFLAGS		= cqls
