--- a/SRC/system_of_eqn/linearSOE/sparseGEN/Makefile
+++ b/SRC/system_of_eqn/linearSOE/sparseGEN/Makefile
@@ -29,7 +29,8 @@ OBJS       = SparseGenColLinSOE.o \
 	PFEMQuasiSolver.o \
 	PFEMDiaLinSOE.o \
 	PFEMDiaSolver.o \
-	PFEMSolver_Laplace.o
+	PFEMSolver_Laplace.o \
+	PFEMSolver_LumpM.o
 else
 
 ifeq ($(PROGRAMMING_MODE), PARALLEL_INTERPRETERS)
@@ -53,7 +54,8 @@ OBJS       = SparseGenColLinSOE.o \
 	PFEMQuasiSolver.o \
 	PFEMDiaLinSOE.o \
 	PFEMDiaSolver.o \
-	PFEMSolver_Laplace.o
+	PFEMSolver_Laplace.o \
+	PFEMSolver_LumpM.o
 else
 
 OBJS       = $(CULA_SOLVER) SparseGenColLinSOE.o \
