adding a 2D wheel-rail element to simulate the vertical wheel-rail interaction (WRI).
A 2D wheel-rail element is implemented to simulate the vertical wheel-rail interaction (WRI). The time- and location- varying WRI makes the simulation of vehicle-track systems complicated. This new element simulates the WRI using a location dependent internal resisting force, which enables the whole finite element (FE) model to remain unchanged in the analysis. Each WRI element includes a wheel node and all the nodes of rail elements that the wheel may potentially pass over during the movement.
The details can be referred to "Gu Q, Liu Y, Guo W, et al. A Practical Wheel-Rail Interaction Element for Modeling Vehicle-Track-Bridge Systems[J]. International Journal of Structural Stability and Dynamics, 2018: 1950011."

--- a/Win64/proj/element/element.vcxproj.filters
+++ b/Win64/proj/element/element.vcxproj.filters
@@ -884,6 +884,9 @@
     <ClCompile Include="..\..\..\SRC\element\dispBeamColumn\DispBeamColumnNL2d.cpp">
       <Filter>dispBeamColumn</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\element\elasticBeamColumn\WheelRail.cpp">
+      <Filter>elasticBeamColumn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\element\Element.h">
@@ -1542,6 +1545,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\element\dispBeamColumn\DispBeamColumnNL2d.h">
       <Filter>dispBeamColumn</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\SRC\element\elasticBeamColumn\WheelRail.h">
+      <Filter>elasticBeamColumn</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
