--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ dist: xenial
 
 before_install:
   - sudo apt-get install -y g++ gcc gfortran make python3 python3-dev tcl8.6 tcl8.6-dev
-  - mkdir ../bin
-  - mkdir ../lib
+  - mkdir bin
+  - mkdir lib
   - cp MAKES/Makefile.def.TRAVIS-CI Makefile.def
 
 script: 
