fmk - adding WheelRail to Makefile and eof to TCLElemenentCommands.cpp

--- a/SRC/element/elasticBeamColumn/Makefile
+++ b/SRC/element/elasticBeamColumn/Makefile
@@ -5,6 +5,7 @@ OBJS       = 	ElasticBeam2d.o \
 	ElasticBeam3d.o \
     ElasticTimoshenkoBeam2d.o \
     ElasticTimoshenkoBeam3d.o \
+	WheelRail.o \
 	TclElasticBeamCommand.o
 
 # Compilation control
