--- a/Win64/proj/material/material.vcxproj.filters
+++ b/Win64/proj/material/material.vcxproj.filters
@@ -1145,6 +1145,9 @@
     <ClCompile Include="..\..\..\SRC\material\uniaxial\TensionOnlyMaterial.cpp">
       <Filter>uniaxial</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\material\uniaxial\SPSW02.cpp">
+      <Filter>uniaxial</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\material\uniaxial\AxialSp.h">
@@ -2142,6 +2145,9 @@
       <Filter>nD\stressDensityModel</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\material\uniaxial\TensionOnlyMaterial.h">
+      <Filter>uniaxial</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\SRC\material\uniaxial\SPSW02.h">
       <Filter>uniaxial</Filter>
     </ClInclude>
   </ItemGroup>
