Changes tio have the project built in Visual Studio: -Updating the settings  of "elemet" project to match other projects and target Windos SDK 10.0.17 -adding existing TimoshenkoBeamColumn source files to the "element" project to stop "Unresolved External Symbol" message from the Linker

--- a/Win64/proj/element/element.vcxproj.filters
+++ b/Win64/proj/element/element.vcxproj.filters
@@ -120,6 +120,9 @@
     <Filter Include="absorbentBoundaries">
       <UniqueIdentifier>{1b806f65-5bd2-4429-9294-d36935d459e3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TimoshenkoBeamColumn">
+      <UniqueIdentifier>{93df4a99-969d-4de9-bdbd-0b4ab20ae601}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\SRC\element\Element.cpp">
@@ -890,6 +893,9 @@
     <ClCompile Include="..\..\..\SRC\element\elasticBeamColumn\WheelRail.cpp">
       <Filter>elasticBeamColumn</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\SRC\element\dispBeamColumn\TimoshenkoBeamColumn2d.cpp">
+      <Filter>TimoshenkoBeamColumn</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\SRC\element\Element.h">
@@ -1551,6 +1557,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\SRC\element\elasticBeamColumn\WheelRail.h">
       <Filter>elasticBeamColumn</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\SRC\element\dispBeamColumn\TimoshenkoBeamColumn2d.h">
+      <Filter>TimoshenkoBeamColumn</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
