Adding Concrete02IS and Steel02Fatigue to Makefile

--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -683,6 +683,7 @@ MATERIAL_LIBS   =  $(FE)/material/Material.o \
 	$(FE)/material/uniaxial/Neoprene.o \
 	$(FE)/material/uniaxial/Concrete01.o \
 	$(FE)/material/uniaxial/Concrete02.o \
+	$(FE)/material/uniaxial/Concrete02IS.o \
 	$(FE)/material/uniaxial/Concrete04.o \
 	$(FE)/material/uniaxial/Concrete06.o \
 	$(FE)/material/uniaxial/Concrete07.o \
@@ -701,6 +702,7 @@ MATERIAL_LIBS   =  $(FE)/material/Material.o \
 	$(FE)/material/uniaxial/ConcreteCM.o \
 	$(FE)/material/uniaxial/RambergOsgoodSteel.o \
 	$(FE)/material/uniaxial/Steel02.o \
+	$(FE)/material/uniaxial/Steel02Fatigue.o \
 	$(FE)/material/uniaxial/Steel4.o \
 	$(FE)/material/uniaxial/Steel2.o \
 	$(FE)/material/uniaxial/OriginCentered.o \
