Interface H5DRM into opensees

--- a/SRC/domain/pattern/drm/Makefile
+++ b/SRC/domain/pattern/drm/Makefile
@@ -6,7 +6,8 @@ OBJS       = Mesh3DSubdomain.o \
 	DRMLoadPattern.o \
 	DRMLoadPatternWrapper.o \
 	DRMInputHandler.o \
-	PlaneDRMInputHandler.o
+	PlaneDRMInputHandler.o \
+	H5DRM.o
 
 all:         $(OBJS)
 
